# vault

./: .pre-commit-config.yaml  404.html  Design.excalidraw  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  build_grpc.sh  docker-compose.yml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  run_test_case.sh  test_ssl.py  test_ssl_integration.py
.github/workflows/: ci.yml
advanced_details/: index.html
assets/mermaid/authentication.mermaid/: index.html
assets/mermaid/setup.mermaid/: index.html
certs/: ca.crt  ca.key
design_implementation/: index.html
docs/: SSL_TLS_Certificate_Management.md  advanced_details.md  design_implementation.md  evaluation.md  how_to_run.md  index.md
docs/assets/: design.excalidraw  register.excalidraw  setup.excalidraw
docs/assets/mermaid/: authentication.mermaid.md  setup.mermaid.md
docs/scripts/: generate_full_book.sh  render_mermaid.sh
evaluation/: evaluation_raw_results_backup.py  index.html  make_plot.py  run_evaluation.py  run_evaluation.sh  run_evaluation.sh.depricated
examples/: ssl_certificate_demo.py
how_to_run/: index.html
print_page/: index.html
protos/: auth.proto  setup.proto  vault.proto  vault_setup.proto
reference/SUMMARY/: index.html
reference/vault/: index.html
reference/vault/bootstrap/: index.html
reference/vault/bootstrap/bootstrap/: index.html
reference/vault/cli/: index.html
reference/vault/common/: index.html
reference/vault/common/docker_utils/: index.html
reference/vault/common/setup_unit/: index.html
reference/vault/common/types/: index.html
reference/vault/crypto/: index.html
reference/vault/manager/: index.html
reference/vault/share_server/: index.html
reference/vault/user/: index.html
scripts/: gen_ref_pages.py  setup_book_setup.sh
search/: search_index.json
src/bootstrap/: Dockerfile  __main__.py
src/common/: constants.py  docker_utils.py  setup_master.py  setup_slave.py  setup_unit.py  types.py
src/manager/: Dockerfile  __main__.py  docker_utils.py  setup_master.py
src/vault/: __init__.py  cli.py  db_manager.py  manager.py  sql.py  vault_pb2.py  vault_pb2_grpc.py
src/vault/bootstrap/: __main__.py  bootstrap.py
src/vault/common/: constants.py  docker_utils.py  setup_unit.py  types.py
src/vault/crypto/: asymmetric.py  authentication.py  certificate_manager.py  certs.py  ec_crypto.py  grpc_ssl.py  shamir.py  ssl.py  threshold.py
src/vault/grpc/: vault_pb2.py  vault_pb2_grpc.py
src/vault/manager/: __main__.py  auth_server.py  db_manager.py  manager.py  setup_master.py
src/vault/share_server/: __main__.py  share_server.py
src/vault/user/: __main__.py  auth_client.py  evaluation.py  user.py
tests/: conftest.py  test_asymmetric.py  test_auth.py  test_auth_services.py  test_bootstrap.py  test_db_manager.py  test_manager.py  test_setup.py  test_setup_private_api.py  test_shamir.py  test_share_server.py  test_threshold.py
(+10 files in other folders)
