[project]
name = "vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yonatan Cohen", email = "jonco5555@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "pycryptodome>=3.23.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
vault = "vault:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "testcontainers[postgres]>=4.12.0",
]
