[project]
name = "vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yonatan Cohen", email = "jonco5555@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "docker>=7.1.0",
    "pycryptodome>=3.23.0",
    "pynacl>=1.5.0",
    "sqlalchemy>=2.0.43",
    "threshold-crypto",
    "greenlet>=3.2.4",
    "pydantic>=2.11.7",
    "protobuf>=6.32.0",
]

[project.scripts]
vault = "vault:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "testcontainers[postgres]>=4.12.0",
]

[tool.uv.sources]
threshold-crypto = { git = "https://github.com/tompetersen/threshold-crypto.git" }

[tool.ruff]
exclude = ["src/vault/common/generated/**"]
